	- Fix automatic gun range adjustments in the WM again.
	- Prevent Orbital AI from changing attitude while launched missile is still near spacecraft.
	- Add Smoke CM timing/interal/repetition settings.
  - Fix the missile evasion direction using the wrong reference frame.
  - Automatically disable precision input mode when auto-tuning (UI element doesn't switch though).
- Armor/Hull:
  - Radar stealth coatings - can now apply radar absorbent/reflective materials on a per-part basis.
	  - Armor coatings less than 10mm thick will provide lessened benefits.
  - Adds new radarReflectivity field to Armor materials so specify degree of radar absorbtion/reflectivity of the armor.
  - Adds new radarMod field to Hull materials to set degree of radar return off unarmored parts.
  - Adds new Radar Absorbent Coating armor type.
  - Adds new Radar Absorbent Foam hull material.
- Weapons:
	- Corrections to penetration and ricochet velocity changes and ricochet positions.
	- Stop APS firing at dead missiles.
	- 'subProjectileCount' has been deprecated and replaced with 'projectileCount'; this specifies number of pellets per shot (for shotguns, etc) to make it more intuitive. Existing shotgun-type weapons will need to update their bulletDefs.
	- The subMunitionType field for beehive ammo now uses the syntax of "ammotype; quantity" (e.g. subMunitionType = 35x228AHEADPellet; 30) with number of projectiles released on detonation set here instead of the subMunition's bulletDef.
	- Fix the aiming reticles of guns (fixed and turrets) and auto-proxy-tracking when using MouseAimFlight (again).
	- Missiles:
		- Fix issue with Rotary Rails trying to use missiles that have previously been blown off from combat damage.
		- Fix issue with MultiMissilelauncher Turrets throwing an NRE when AI firing.
		- Fix mass changes of missiles that decouple boosters and add missile mass debug telemetry.
		- Fix radar and heat targeting leading targets excessively (most apparent in orbit).