@@ -655,6 +655,7 @@ Localization
         #LOC_BDArmory_IdleSpeed = Idle Speed
         #LOC_BDArmory_ABPriority = Afterburner Priority
         #LOC_BDArmory_ABOverrideThreshold = Afterburner Override Threshold
+        #LOC_BDArmory_BrakingPriority = Braking Priority
 
         #LOC_BDArmory_MaxDrift = Max drift
 
@@ -752,6 +753,7 @@ Localization
         #LOC_BDArmory_AIWindow_idleSpeed = Non-combat cruise speed
         #LOC_BDArmory_AIWindow_ABPriority = Modifies the threshold for enabling the afterburner
         #LOC_BDArmory_AIWindow_ABOverrideThreshold_Context = Force use of afterburner if below this speed and full throttle
+        #LOC_BDArmory_AIWindow_BrakingPriority = Prioritize using brakes to slow down when allowed
         #LOC_BDArmory_AIWindow_LSSL = Limits control below low speed limit
         #LOC_BDArmory_AIWindow_LSLS = AI uses Low-Speed Limiter below this speed
         #LOC_BDArmory_AIWindow_HSSL = Limits control above high speed limit
@@ -863,6 +865,7 @@ Localization
         #LOC_BDArmory_AIWindow_SpeedHelp_gnd = Strafing Speed - This is the airspeed the AI will use when attacking ground targets. If the ground target is moving, Strafing Speed will add the ground target's speed.
         #LOC_BDArmory_AIWindow_SpeedHelp_ABpriority = AB Priority - This controls the level of requested acceleration at which the AI will turn on/off the afterburners.
         #LOC_BDArmory_AIWindow_SpeedHelp_ABOverrideThreshold = AB Override Threshold - Below this speed threshold, the AI will turn on the afterburners if the throttle is at max.
+        #LOC_BDArmory_AIWindow_SpeedHelp_BrakingPriority = Braking Priority - This controls the aggressiveness of the AI using the brakes when allowed.
 
         #LOC_BDArmory_AIWindow_ControlHelp = Control Limits set limits on craft control authority under various conditions
         #LOC_BDArmory_AIWindow_ControlHelp_limiters = Steer Limiters - Steer Limiters limit Control Authority of the craft. The Low Speed Limiter sets AI control authority when at or below the Low-Speed Limit Speed. The High-Speed Limiter sets AI control authority when at or above the High-Speed Limit Speed. When between the Low and High Limit Speeds, the Limiter value linearly changes from the Low Limit to the High Limit value. The Altitude Steer Limiter scales the steer limit based on altitude above the limit by (altitude/limit)^factor.
